
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.simone.booksharing.LoginFragment"
    android:background="@drawable/back"
    android:padding="@dimen/fragment_padding">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:inputType="textEmailAddress"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/email_et"
                android:hint="@string/email"
                android:layout_marginTop="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:inputType="text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/nome_et"
                android:hint="@string/nome"
                android:layout_marginTop="80dp"
                android:layout_below="@+id/email_et"
                android:layout_alignStart="@+id/email_et" />

            <EditText
                android:inputType="text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/cognome_et"
                android:hint="@string/cognome"
                android:layout_marginTop="80dp"
                android:layout_below="@+id/nome_et"
                android:layout_alignStart="@+id/email_et"/>


            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/password_et"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_marginTop="80dp"
                android:layout_below="@+id/cognome_et"
                android:layout_alignStart="@+id/email_et"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/conf_password_et"
                android:hint="@string/confirmpsw"
                android:layout_marginTop="80dp"
                android:layout_below="@+id/password_et"
                android:layout_alignStart="@+id/email_et"
                 />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iscriviti"
                android:id="@+id/iscriviti_button"
                android:layout_below="@+id/conf_password_et"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:background="@drawable/button_rounded" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

