<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:padding="@dimen/fragment_padding">

    <ImageView
        android:layout_width="275dp"
        android:layout_height="380dp"
        android:id="@+id/imageView"
        android:layout_marginLeft="20dp"
        android:background="@drawable/sfondo"
        android:layout_marginStart="68dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenota"
        android:id="@+id/prenota_button"
        android:layout_marginEnd="196dp"
        android:layout_gravity="right"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_rounded"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:id="@+id/linearLayout"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="51dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titolo"
            android:id="@+id/titolo_tw"
            android:textAlignment="center"
            android:padding="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/autore"
            android:id="@+id/autore_tw"
            android:padding="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/genere"
            android:id="@+id/genere_tw"
            android:padding="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Stato"
            android:id="@+id/stato_tw"
            android:padding="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/luogo"
            android:id="@+id/luogo_tw"
            android:padding="3dp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"

            style="?android:attr/ratingBarStyleSmall"
            android:id="@+id/rating_bar"
            android:numStars="5"
            android:padding="3dp" />

    </LinearLayout>

</RelativeLayout>